--- a/org.openwms/trunk/source/pom.xml
+++ b/org.openwms/trunk/source/pom.xml
@@ -28,7 +28,7 @@
     <artifactId>org.openwms</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>OpenWMS</name>
+    <name>Main Project</name>
     <description>This is an Open Source Software (OSS) project</description>
     <url>http://www.openwms.org</url>
     <inceptionYear>2005</inceptionYear>
@@ -43,33 +43,31 @@
             <name>GNU LESSER GENERAL PUBLIC LICENSE</name>
             <url>http://www.gnu.org/licenses/lgpl.txt</url>
             <distribution>repo</distribution>
-            <comments>OpenWMS is distributed as open-source</comments>
+            <comments>OpenWMS.org is distributed as open-source</comments>
         </license>
     </licenses>
 
     <distributionManagement>
         <repository>
             <id>${distribution.repo.serverId}</id>
-            <name>OpenWMS Release Repository</name>
+            <name>OpenWMS.org Release Repository</name>
             <url>${distribution.repo.serverProtocol}//${distribution.repo.serverUrl.rootPath}</url>
         </repository>
         <snapshotRepository>
             <id>${distribution.repo.serverId}</id>
-            <name>OpenWMS Snapshot Repository</name>
+            <name>OpenWMS.org Snapshot Repository</name>
             <url>${distribution.repo.serverProtocol}//${distribution.repo.snapshot.serverUrl.rootPath}</url>
         </snapshotRepository>
         <site>
             <id>${distribution.serverId}</id>
-            <name>OpenWMS WebSite</name>
+            <name>OpenWMS.org WebSite</name>
             <url>${distribution.serverProtocol}://${distribution.serverUrl.sourcePath}</url>
         </site>
     </distributionManagement>
 
     <scm>
-        <connection>scm:svn:http://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source
-        </connection>
-        <developerConnection>scm:svn:https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source
-        </developerConnection>
+        <connection>scm:svn:http://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source</connection>
+        <developerConnection>scm:svn:https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source</developerConnection>
         <url>http://openwms2005.svn.sourceforge.net/viewvc/openwms2005/org.openwms/trunk/source</url>
     </scm>
 
@@ -86,7 +84,7 @@
             <url>https://sourceforge.net/users/scherrer</url>
             <timezone>+1</timezone>
             <roles>
-                <role>project owner</role>
+                <role>project founder</role>
                 <role>developer</role>
                 <role>deployer</role>
             </roles>
@@ -96,11 +94,10 @@
             <name>Frank Lauer</name>
             <email>flauer99@users.sourceforge.net</email>
             <url>https://sourceforge.net/users/flauer99</url>
-            <organization>Aberle GmbH</organization>
-            <organizationUrl>http://www.a-s.de</organizationUrl>
             <timezone>+1</timezone>
             <roles>
                 <role>developer</role>
+                <role>site master</role>
             </roles>
         </developer>
         <developer>
@@ -137,7 +134,7 @@
 
     <mailingLists>
         <mailingList>
-            <name>OpenWMS Public Mailing list</name>
+            <name>OpenWMS.org Public Mailing list</name>
             <subscribe>
                 http://lists.sourceforge.net/lists/listinfo/openwms2005-public
 			</subscribe>
@@ -150,7 +147,7 @@
             <post>openwms2005-public@lists.sourceforge.net</post>
         </mailingList>
         <mailingList>
-            <name>OpenWMS Development Mailing list</name>
+            <name>OpenWMS.org Development Mailing list</name>
             <subscribe>
                 http://lists.sourceforge.net/lists/listinfo/openwms2005-development
 			</subscribe>
@@ -166,7 +163,7 @@
 
     <ciManagement>
         <system>Hudson</system>
-        <url>http://nexus.worker:8085/hudson</url>
+        <url>http://openwms.blogsite.org:81</url>
     </ciManagement>
 
     <profiles>
@@ -203,6 +200,7 @@
                 <module>org.openwms.common.framework.test</module>
                 <module>org.openwms.common.infrastructure.configuration</module>
                 <module>org.openwms.common.infrastructure.hsql</module>
+                <module>org.openwms.common.infrastructure.oracle</module>
                 <module>org.openwms.common.infrastructure.postgres</module>
                 <module>org.openwms.common.integration</module>
                 <module>org.openwms.common.integration.eclipselink</module>
@@ -225,7 +223,7 @@
         <profile>
             <id>domain</id>
             <modules>
-                <module>org.openwms.client.flex.wrapper</module>
+                <module>org.openwms.common.domain.as</module>
             </modules>
         </profile>
         <profile>
@@ -254,13 +252,13 @@
             </activation>
             <properties>
                 <!-- Web Site deployment -->
-                <distribution.serverId>repo.sourceforge.net</distribution.serverId>
+                <distribution.serverId>shell.sourceforge.net</distribution.serverId>
                 <distribution.serverProtocol>scp</distribution.serverProtocol>
-                <distribution.serverUrl.rootPath>shell.sourceforge.net/home/groups/o/op/openwms2005/htdocs/openwms</distribution.serverUrl.rootPath>
+                <distribution.serverUrl.rootPath>shell.sourceforge.net/home/groups/o/op/openwms2005/htdocs</distribution.serverUrl.rootPath>
                 <distribution.serverUrl.sourcePath>${distribution.serverUrl.rootPath}/development/reference/${project.version}</distribution.serverUrl.sourcePath>
                 <distribution.serverUrl.docsPath>${distribution.serverUrl.rootPath}/docs</distribution.serverUrl.docsPath>
                 <!-- Maven Repo Artifact deployment -->
-                <distribution.repo.serverId>repo.sourceforge.net</distribution.repo.serverId>
+                <distribution.repo.serverId>shell.sourceforge.net</distribution.repo.serverId>
                 <distribution.repo.serverProtocol>scp:</distribution.repo.serverProtocol>
                 <distribution.repo.serverUrl.rootPath>shell.sourceforge.net/home/groups/o/op/openwms2005/htdocs/repo/releases</distribution.repo.serverUrl.rootPath>
                 <distribution.repo.snapshot.serverUrl.rootPath>shell.sourceforge.net/home/groups/o/op/openwms2005/htdocs/repo/snapshots</distribution.repo.snapshot.serverUrl.rootPath>
@@ -282,6 +280,29 @@
 
     <pluginRepositories>
         <pluginRepository>
+            <id>org.openwms.release</id>
+            <name>OpenWMS.org Sourceforge Maven Repository Releases</name>
+            <url>http://openwms2005.sourceforge.net/repo/releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>org.openwms.snapshots</id>
+            <name>OpenWMS.org Sourceforge Maven Repository Snapshots</name>
+            <url>http://openwms2005.sourceforge.net/repo/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+<!-- 
+        <pluginRepository>
             <id>com.springsource.repository.bundles.release</id>
             <name>SpringSource Enterprise Bundle Repository - Releases</name>
             <url>http://repository.springsource.com/maven/bundles/release</url>
@@ -291,11 +312,12 @@
             <name>SpringSource Enterprise Bundle Repository - Milestone</name>
             <url>http://repository.springsource.com/maven/bundles/milestone</url>
         </pluginRepository>
+-->
     </pluginRepositories>
     <repositories>
         <repository>
-            <id>org.openwms.releases</id>
-            <name>OpenWMS Sourceforge Maven Repository Releases</name>
+            <id>org.openwms.release</id>
+            <name>OpenWMS.org Sourceforge Maven Repository Releases</name>
             <url>http://openwms2005.sourceforge.net/repo/releases</url>
             <releases>
                 <enabled>true</enabled>
@@ -305,8 +327,8 @@
             </snapshots>
         </repository>
         <repository>
-            <id>org.openwms.snapshot</id>
-            <name>OpenWMS Sourceforge Maven Repository Snapshots</name>
+            <id>org.openwms.snapshots</id>
+            <name>OpenWMS.org Sourceforge Maven Repository Snapshots</name>
             <url>http://openwms2005.sourceforge.net/repo/snapshots</url>
             <releases>
                 <enabled>false</enabled>
@@ -315,6 +337,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+<!-- 
         <repository>
             <id>com.springsource.repository.bundles.release</id>
             <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
@@ -336,6 +359,11 @@
             <url>http://repository.springsource.com/maven/bundles/snapshot</url>
         </repository>
         <repository>
+            <id>com.springsource.repository.libraries.snapshot</id>
+            <name>SpringSource Enterprise Bundle Repository - Snapshot Library Releases</name>
+            <url>http://repository.springsource.com/maven/libraries/snapshot</url>
+        </repository>
+        <repository>
             <id>com.springsource.repository.libraries.release</id>
             <name>SpringSource Enterprise Bundle Repository - SpringSource Library Releases</name>
             <url>http://repository.springsource.com/maven/libraries/release</url>
@@ -350,17 +378,12 @@
             <name>SpringSource Enterprise Bundle Repository - Milestone Library Releases</name>
             <url>http://repository.springsource.com/maven/libraries/milestone</url>
         </repository>
-        <repository>
-            <id>com.springsource.repository.libraries.snapshot</id>
-            <name>SpringSource Enterprise Bundle Repository - Snapshot Library Releases</name>
-            <url>http://repository.springsource.com/maven/libraries/snapshot</url>
-        </repository>
+-->
     </repositories>
 
     <build>
         <pluginManagement>
             <plugins>
-
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
@@ -547,22 +570,22 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.6.1</version>
+                <inherited>true</inherited>
                 <reportSets>
                     <reportSet>
+                        <inherited>true</inherited>
                         <reports>
                             <report>aggregate</report>
                         </reports>
                         <configuration>
+                            <detectLinks>true</detectLinks>
+                            <excludePackageNames>org.openwms.web.flex.servlet</excludePackageNames>
+                            <keywords>true</keywords>
                             <linksource>true</linksource>
-                            <links>
-                                <link>http://java.sun.com/j2se/${jdkVersion}.0/docs/api/</link>
-                            </links>
-                            <detectLinks/>
                             <overview>${basedir}/overview.html</overview>
                             <source>${project.build.sourceCompilerLevel}</source>
-                            <verbose>true</verbose>
                             <stylesheetfile>src/site/css/openwms-jdoc.css</stylesheetfile>
-                            <excludePackageNames>org.openwms.web.flex.servlet</excludePackageNames>
+                            <verbose>true</verbose>
                         </configuration>
                     </reportSet>
                 </reportSets>
@@ -578,7 +601,7 @@
                     <aggregate>true</aggregate>
                     <javadocDir>${project.name}/apidocs</javadocDir>
                     <stylesheet>${basedir}/src/site/css/openwms-jdoc.css</stylesheet>
-                    <windowTitle>OpenWMS Sources</windowTitle>
+                    <windowTitle>OpenWMS.org Java Sources</windowTitle>
                 </configuration>
             </plugin>
 
@@ -635,8 +658,8 @@
                 <configuration>
                     <xrefLocation>${project.reporting.outputDirectory}/../xref</xrefLocation>
                     <enableRulesSummary>false</enableRulesSummary>
-                    <configLocation>http://openwms2005.sourceforge.net/openwms/rules/checkstyle/checkstyle.xml</configLocation>
-                    <headerLocation>http://openwms2005.sourceforge.net/openwms/rules/checkstyle/checkstyle-license.txt</headerLocation>
+                    <configLocation>http://openwms2005.sourceforge.net/rules/checkstyle/checkstyle.xml</configLocation>
+                    <headerLocation>http://openwms2005.sourceforge.net/rules/checkstyle/checkstyle-license.txt</headerLocation>
                 </configuration>
             </plugin>
 
@@ -992,8 +1015,6 @@
                 <scope>test</scope>
             </dependency>
         
-        
-        
             <!-- Project dependencies -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
@@ -1019,6 +1040,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.common.infrastructure.postgres</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>org.openwms.common.infrastructure.oracle</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
