--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -290,6 +290,16 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <detectLinks>true</detectLinks>
+                            <excludePackageNames>org.openwms.web.flex.servlet</excludePackageNames>
+                            <keywords>true</keywords>
+                            <linksource>true</linksource>
+                            <overview>${basedir}/overview.html</overview>
+                            <source>${project.build.sourceCompilerLevel}</source>
+                            <stylesheetfile>${basedir}/src/site/css/openwms-jdoc.css</stylesheetfile>
+                            <verbose>true</verbose>
+                        </configuration>                        
                     </plugin>
 	            </plugins>
             </build>
@@ -314,9 +324,6 @@
             <id>org.openwms.release</id>
             <name>OpenWMS.org Sourceforge Maven Repository Releases</name>
             <url>http://openwms2005.sourceforge.net/repo/releases</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -328,20 +335,23 @@
             <releases>
                 <enabled>false</enabled>
             </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
         </pluginRepository>
 <!-- -->
         <pluginRepository>
             <id>com.springsource.repository.bundles.release</id>
             <name>SpringSource Enterprise Bundle Repository - Releases</name>
             <url>http://repository.springsource.com/maven/bundles/release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </pluginRepository>
         <pluginRepository>
             <id>com.springsource.repository.bundles.milestone</id>
             <name>SpringSource Enterprise Bundle Repository - Milestone</name>
             <url>http://repository.springsource.com/maven/bundles/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </pluginRepository>
 
     </pluginRepositories>
@@ -350,9 +360,6 @@
             <id>org.openwms.release</id>
             <name>OpenWMS.org Sourceforge Maven Repository Releases</name>
             <url>http://openwms2005.sourceforge.net/repo/releases</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -364,50 +371,71 @@
             <releases>
                 <enabled>false</enabled>
             </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
         </repository>
 <!-- -->
         <repository>
             <id>com.springsource.repository.bundles.release</id>
             <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
             <url>http://repository.springsource.com/maven/bundles/release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
             <id>com.springsource.repository.bundle.external</id>
             <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
             <url>http://repository.springsource.com/maven/bundles/external</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
             <id>com.springsource.repository.bundle.milestone</id>
             <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Milestones</name>
             <url>http://repository.springsource.com/maven/bundles/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
             <id>com.springsource.repository.bundles.snapshot</id>
             <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Snapshot</name>
             <url>http://repository.springsource.com/maven/bundles/snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
         </repository>
         <repository>
             <id>com.springsource.repository.libraries.snapshot</id>
-            <name>SpringSource Enterprise Bundle Repository - Snapshot Library Releases</name>
+            <name>SpringSource Enterprise Bundle Repository - Snapshot Library Snapshots</name>
             <url>http://repository.springsource.com/maven/libraries/snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
         </repository>
         <repository>
             <id>com.springsource.repository.libraries.release</id>
             <name>SpringSource Enterprise Bundle Repository - SpringSource Library Releases</name>
             <url>http://repository.springsource.com/maven/libraries/release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
             <id>com.springsource.repository.libraries.external</id>
             <name>SpringSource Enterprise Bundle Repository - External Library Releases</name>
             <url>http://repository.springsource.com/maven/libraries/external</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
             <id>com.springsource.repository.libraries.milestone</id>
             <name>SpringSource Enterprise Bundle Repository - Milestone Library Releases</name>
             <url>http://repository.springsource.com/maven/libraries/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
 
     </repositories>
@@ -610,6 +638,10 @@
                         </reports>
                         <configuration>
                             <detectLinks>true</detectLinks>
+                            <links>
+                                <link>http://static.springsource.org/spring/docs/${spring.version}/javadoc-api</link>
+                                <link>http://static.springsource.org/spring-security/site/docs/3.0.x/apidocs</link>
+                            </links>
                             <excludePackageNames>org.openwms.web.flex.servlet</excludePackageNames>
                             <keywords>true</keywords>
                             <linksource>true</linksource>
@@ -617,6 +649,17 @@
                             <source>${project.build.sourceCompilerLevel}</source>
                             <stylesheetfile>${basedir}/src/site/css/openwms-jdoc.css</stylesheetfile>
                             <verbose>true</verbose>
+                            <aggregate>true</aggregate>
+                            <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
+                            <docletArtifact>
+                                <groupId>gr.spinellis</groupId>
+                                <artifactId>UmlGraph</artifactId>
+                                <version>4.6</version>
+                            </docletArtifact>
+                            <additionalparam>
+                            -inferrel -inferdep -quiet -hide java.* -collpackages java.util.* 
+                            -qualify -postfixpackage -nodefontname Tahoma -nodefontsize 9 -nodefontpackagesize 7
+                            -link http://static.springsource.org/spring/docs/${spring.version}/javadoc-api</additionalparam>
                         </configuration>
                     </reportSet>
                 </reportSets>
