--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -51,12 +51,12 @@
         <repository>
             <id>${distribution.repo.serverId}</id>
             <name>OpenWMS.org Release Repository</name>
-            <url>${distribution.repo.serverProtocol}//${distribution.repo.serverUrl.rootPath}</url>
+            <url>${distribution.repo.serverProtocol}://${distribution.repo.serverUrl.rootPath}</url>
         </repository>
         <snapshotRepository>
             <id>${distribution.repo.serverId}</id>
             <name>OpenWMS.org Snapshot Repository</name>
-            <url>${distribution.repo.serverProtocol}//${distribution.repo.snapshot.serverUrl.rootPath}</url>
+            <url>${distribution.repo.serverProtocol}://${distribution.repo.snapshot.serverUrl.rootPath}</url>
         </snapshotRepository>
         <site>
             <id>${distribution.serverId}</id>
@@ -181,7 +181,7 @@
                 <distribution.serverUrl.docsPath>${distribution.serverUrl.rootPath}/docs</distribution.serverUrl.docsPath>
                 <!-- Maven Repo Artifact deployment -->
                 <distribution.repo.serverId>shell.sourceforge.net</distribution.repo.serverId>
-                <distribution.repo.serverProtocol>scp:</distribution.repo.serverProtocol>
+                <distribution.repo.serverProtocol>scp</distribution.repo.serverProtocol>
                 <distribution.repo.serverUrl.rootPath>shell.sourceforge.net/home/groups/o/op/openwms2005/htdocs/repo/releases</distribution.repo.serverUrl.rootPath>
                 <distribution.repo.snapshot.serverUrl.rootPath>shell.sourceforge.net/home/groups/o/op/openwms2005/htdocs/repo/snapshots</distribution.repo.snapshot.serverUrl.rootPath>
             </properties>
@@ -197,7 +197,7 @@
                 <distribution.serverUrl.docsPath>${distribution.serverUrl.rootPath}/docs</distribution.serverUrl.docsPath>
                 <!-- Maven Repo Artifact deployment -->
                 <distribution.repo.serverId>nexus</distribution.repo.serverId>
-                <distribution.repo.serverProtocol>http:</distribution.repo.serverProtocol>
+                <distribution.repo.serverProtocol>http</distribution.repo.serverProtocol>
                 <distribution.repo.serverUrl.rootPath>rudi:8081/nexus/content/repositories/releases</distribution.repo.serverUrl.rootPath>
                 <distribution.repo.snapshot.serverUrl.rootPath>rudi:8081/nexus/content/repositories/snapshots</distribution.repo.snapshot.serverUrl.rootPath>
             </properties>
@@ -205,15 +205,15 @@
         <profile>
             <id>client</id>
             <modules>
-                <module>core/org.openwms.client.flex.lib</module>
-                <module>core/org.openwms.core.domain.as</module>
-                <module>common/org.openwms.common.flex.lib</module>
-                <module>common/org.openwms.common.domain.as</module>
-                <module>common/org.openwms.common.flex.module</module>
-                <module>tms/org.openwms.tms.domain.as</module>
-                <module>tms/org.openwms.tms.flex.module</module>
-                <module>app/org.openwms.client.flex.app</module>
-                <module>app/org.openwms.client.flex.wrapper</module>
+                <module>org.openwms.core/org.openwms.client.flex.lib</module>
+                <module>org.openwms.core/org.openwms.core.domain.as</module>
+                <module>org.openwms.common/org.openwms.common.flex.lib</module>
+                <module>org.openwms.common/org.openwms.common.domain.as</module>
+                <module>org.openwms.common/org.openwms.common.flex.module</module>
+                <module>org.openwms.tms/org.openwms.tms.domain.as</module>
+                <module>org.openwms.tms/org.openwms.tms.flex.module</module>
+                <module>org.openwms.app/org.openwms.client.flex.app</module>
+                <module>org.openwms.app/org.openwms.client.flex.wrapper</module>
             </modules>
         </profile>
         <profile>
@@ -222,34 +222,34 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
-                <module>app</module>
-                <module>core</module>
-                <module>common</module>
-                <module>tms</module>
+                <module>org.openwms.app</module>
+                <module>org.openwms.core</module>
+                <module>org.openwms.common</module>
+                <module>org.openwms.tms</module>
             </modules>
         </profile>
         <profile>
             <id>app</id>
             <modules>
-                <module>app</module>
+                <module>org.openwms.app</module>
             </modules>
         </profile>
         <profile>
             <id>core</id>
             <modules>
-                <module>core</module>
+                <module>org.openwms.core</module>
             </modules>
         </profile>
         <profile>
             <id>common</id>
             <modules>
-                <module>common</module>
+                <module>org.openwms.common</module>
             </modules>
         </profile>
         <profile>
             <id>tms</id>
             <modules>
-                <module>tms</module>
+                <module>org.openwms.tms</module>
             </modules>
         </profile>
         <profile>
@@ -257,7 +257,6 @@
             <build>
     	        <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <executions>
                             <execution>
@@ -277,6 +276,16 @@
                             <stylesheetfile>${basedir}/src/site/css/openwms-jdoc.css</stylesheetfile>
                             <verbose>true</verbose>
                         </configuration>                        
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
 	            </plugins>
             </build>
@@ -518,17 +527,6 @@
         </pluginManagement>
 
         <plugins>
-
-            <plugin>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
 
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -1214,7 +1212,7 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.client.flex.app</artifactId>
+                <artifactId>org.openwms.client.flex.ss</artifactId>
                 <version>${project.version}</version>
                 <type>swf</type>
             </dependency>
