--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -504,7 +504,7 @@
         <spring.version>3.1.1.RELEASE</spring.version>
         <jsf.impl.version>2.1.4</jsf.impl.version>
         <jsf.api.version>2.1.4</jsf.api.version>
-        <primefaces.version>3.0</primefaces.version>
+        <primefaces.version>3.2</primefaces.version>
 
         <!-- OSGi header versions -->
         <osgi.apache.commons.lang.version>${apache.commons.lang.version}</osgi.apache.commons.lang.version>
@@ -1238,6 +1238,11 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>com.springsource.org.postgresql.jdbc4</artifactId>
                 <version>${org.postgresql.jdbc4.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.3.166</version>
             </dependency>
             <dependency>
                 <groupId>org.openwms</groupId>
