--- a/org.openwms.app/pom.xml
+++ b/org.openwms.app/pom.xml
@@ -64,6 +64,17 @@
             </activation>
             <modules>
                 <module>org.openwms.client.rest.provider</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>angularjs</id>
+            <activation>
+                <property>
+                    <name>angularjs</name>
+                </property>
+            </activation>
+            <modules>
+                <module>org.openwms.client.rest.provider</module>
                 <module>org.openwms.client.angularjs.app</module>
                 <module>org.openwms.client.angularjs.wrapper</module>
             </modules>
