--- a/org.openwms.core/org.openwms.core.configuration/pom.xml
+++ b/org.openwms.core/org.openwms.core.configuration/pom.xml
@@ -33,15 +33,39 @@
     <artifactId>org.openwms.core.configuration</artifactId>
     <name>${project.artifactId}</name>
     <description>This bundle project contains interface types for the DAO integration layer. Those interfaces are free from annotations and do not depend on other frameworks except plain Java.</description>
+
     <properties>
         <moduleDir>../..</moduleDir>
+        <start-class>org.openwms.core.configuration.Starter</start-class>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>defaut</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+
+    <build>
+        <finalName>openwms-core-config</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- Project dependencies -->
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.domain</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -55,11 +79,6 @@
             <artifactId>spring-oxm</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.openwms</groupId>
             <artifactId>org.openwms.core.test</artifactId>
